# uv-pytest

./: pyproject.toml
.github/workflows/: test.yml
src/uv_pytest/: __init__.py
tests/: conftest.py
