[project]
name = "uv-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Wason", email = "rectalogic@rectalogic.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group>=1.2.3",
    "openai>=1.0",
    "pip",
    "pluggy",
    "pydantic>=1.10.2",
    "pyreadline3; sys_platform == 'win32'",
    "python-ulid",
    "PyYAML",
    "setuptools",
    "sqlite-migrate>=0.1a2",
    "sqlite-utils>=3.37",
]

[project.scripts]
uv-pytest = "uv_pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "cogapp",
    "mypy>=1.10.0",
    "numpy",
    "pytest",
    "pytest-httpx",
    "ruff",
    "types-PyYAML",
]
